# mds

./: README.md  catalog.csv  pyproject.toml  scrapy.cfg
mds/: cli.py  pipelines.py  settings.py
mds/spiders/: audio.py  catalog.py
